Added Parity under DevDependencies

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "type": "commonjs",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@parity/hardhat-polkadot": "^0.1.9",
     "hardhat": "^2.27.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "ws": "^8.18.3"
   }
 }
