--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "tailwind-merge": "^3.4.0",
     "ws": "^8.18.3"
   }
 }
