--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@openzeppelin/contracts": "^5.4.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "ethers": "^6.15.0",
     "tailwind-merge": "^3.4.0",
     "ws": "^8.18.3"
   }
