--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "viem": "^2.39.0",
     "wagmi": "^2.19.3",
